--- a/config.cfg
+++ b/config.cfg
@@ -186,6 +186,7 @@ cl_radar_rotate "1"
 cl_radar_scale "0.7"
 cl_radar_square_with_scoreboard "1"
 cl_righthand "1"
+cl_crosshairdot "0"
 cl_rumblescale "1.0"
 cl_scalecrosshair "1"
 cl_scoreboard_mouse_enable_binding "+attack2"
